fix padding and align-items

--- a/styles/aboutme.css
+++ b/styles/aboutme.css
@@ -90,6 +90,7 @@ a:hover {
     padding: 1rem;
     margin: 1em;
     max-width: 100%;
+    align-content: center;
 }
 
 .center {
