--- a/styles/index.css
+++ b/styles/index.css
@@ -86,6 +86,7 @@ a:hover {
     padding: 1rem;
     margin: 1em;
     max-width: 100%;
+    align-items: center;
 }
 
 .center {
@@ -118,6 +119,10 @@ a:hover {
 
 .active a {
     color: var(--hover-color);
+}
+
+.social {
+    padding: 0.25em;
 }
 
 .social a {
